<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_txtVwName" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        />

    <TextView
        android:id="@+id/lblSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_txtVwSurname"
        />

    <EditText
        android:id="@+id/txtSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        />

    <CheckBox
        android:id="@+id/chkPolite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/main_politeMode"
        />


    <Button
        android:id="@+id/btnSaludar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btnSaludar"
        />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btnReset"
        />

    <TextView
        android:id="@+id/lblSaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>
